# virtual-turn-table

./: .env.example  .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  compose.yaml  pylint.sh  pylint_script.py  requirements.txt
.github/: dependabot.yml
.github/workflows/: codeql.yml  docker-image.yml  node.js.yml  python-package.yml
README_resources/: architecture_diagram.puml
bff/: Dockerfile  __init__.py  api_models.py  auth.py  config.py  image_search.py  music.py  pyproject.toml  requirements.txt  social.py  user.py  websocket.py
bff/tests/: conftest.py  test_app.py  test_auth.py  test_bff.py  test_bff_base.py  test_get_album.py  test_get_public_collections.py  test_get_shared_collections.py  test_get_user.py  test_image_to_uri.py  test_play_track.py  test_share_collection.py  test_social.py  test_toggle_public_collection.py  test_user.py
image_to_album/: Dockerfile  __init__.py  api_models.py  config.py  endpoints.py  images.py  pyproject.toml  requirements.txt  reverse_image_search.py
image_to_album/tests/: conftest.py  test_app.py  test_img_to_album.py  test_img_to_album_base.py  test_reverse_image_search.py  test_spotify_search.py
image_to_album/tests/mock_api_data/: mock_album_data.json  mock_image_search_data.json  mock_spotify_search_data.json
integration_tests/: conftest.py  test_bff_integration.py
music/: __init__.py  music.py
report/: abstract.tex  appendix1.tex  appendix_backend_endpoints.tex  appendix_fe_comps.tex  appendix_test_albums.tex  appendix_testcases.tex  chapter_background.tex  chapter_conclusion.tex  chapter_deployment.tex  chapter_design.tex  chapter_development.tex  chapter_evaluation.tex  chapter_introduction.tex  muthesis.cls  refs.bib  report.lot  report.synctex(busy)  report.tex
turn-table-ui/: package-lock.json  package.json
turn-table-ui/src/: App.jsx
turn_table_ui/: .env  .env.development  .env.example  .env.production  Dockerfile  biome.json  index.html  package-lock.json  package.json  tailwind.config.cjs  tailwind.config.js  tsconfig.json  vite.config.ts
turn_table_ui/src/: App.tsx  main.tsx  (+2 more)
user_data/: .dockerignore  Dockerfile  __init__.py  alembic.ini  api_models.py  db.py  db_models.py  pyproject.toml  requirements.txt  social.py  users.py
user_data/alembic/: env.py
user_data/alembic/versions/: 9a7c39a1f238_create_database.py
user_data/db/: .placeholder
user_data/tests/: conftest.py  test_social.py  test_user_data_base.py  test_user_data_endpoints.py
utils/: eval_script.py  generate_example_data.py  pylint_script.py
(+162 files in other folders)
